corrected wrongful commits

--- a/bmw-car/e-models.html
+++ b/bmw-car/e-models.html
@@ -29,6 +29,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="CarGame/index.html">Spiel</a>
+                      </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Autos
@@ -49,6 +52,8 @@
                             <li><a class="dropdown-item" href="../infos-bmw/history.html">Geschichte</a></li>
                             <li><a class="dropdown-item" href="../infos-bmw/index.html">Marken</a></li>
                             <li><a class="dropdown-item" href="../infos-bmw/sustainability.html">Sustainability</a></li>
+                            <li><a class="dropdown-item" href="../infos-bmw/cooperation.html">Kooperationen</a></li>
+                            <li><a class="dropdown-item" href="../infos-bmw/map.html">Unsere Standorte</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
