--- a/bmw-car/index.html
+++ b/bmw-car/index.html
@@ -22,6 +22,9 @@
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                         <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="CarGame/index.html">Spiel</a>
+                          </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Autos</a>
                             <ul class="dropdown-menu">
@@ -38,6 +41,8 @@
                                 <li><a class="dropdown-item" href="../infos-bmw/history.html">Geschichte</a></li>
                                 <li><a class="dropdown-item" href="../infos-bmw/index.html">Marken</a></li>
                                 <li><a class="dropdown-item" href="../infos-bmw/sustainability.html">Sustainability</a></li>
+                                <li><a class="dropdown-item" href="../infos-bmw/cooperation.html">Kooperationen</a></li>
+                                <li><a class="dropdown-item" href="../infos-bmw/map.html">Unsere Standorte</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
