--- a/infos-bmw/cooperation.html
+++ b/infos-bmw/cooperation.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="CarGame/index.html">Spiel</a>
+            <a class="nav-link" href="../CarGame/index.html">Spiel</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
