--- a/bmw-car/index.html
+++ b/bmw-car/index.html
@@ -23,7 +23,7 @@
                     <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                         <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                         <li class="nav-item">
-                            <a class="nav-link" href="CarGame/index.html">Spiel</a>
+                            <a class="nav-link" href="../CarGame/index.html">Spiel</a>
                           </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Autos</a>
