--- a/bmw-car/x-models.html
+++ b/bmw-car/x-models.html
@@ -9,61 +9,61 @@
     <link rel="stylesheet" href="../styles/cars.css">
 </head>
 <body>
-<div class ="image-container">
-    <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
-</div>
-    <div class="main">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarScroll">
-                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="CarGame/index.html">Spiel</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Autos
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="index.html">Serien</a></li>
-                        <li><a class="dropdown-item" href="engines.html">Motoren</a></li>
-                        <li><a class="dropdown-item" href="x-models.html">X-Modelle</a></li>
-                        <li><a class="dropdown-item" href="e-models.html">E-Modelle</a></li>
-                        <li><a class="dropdown-item" href="special.html">Sonderwagen</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="../infos-bmw/index.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Infos
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="../infos-bmw/history.html">Geschichte</a></li>
-                        <li><a class="dropdown-item" href="../infos-bmw/index.html">Marken</a></li>
-                        <li><a class="dropdown-item" href="../infos-bmw/sustainability.html">Sustainability</a></li>
-                        <li><a class="dropdown-item" href="../infos-bmw/cooperation.html">Kooperationen</a></li>
-                        <li><a class="dropdown-item" href="../infos-bmw/map.html">Unsere Standorte</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../about-us/index.html">Über uns</a>
-                  </li>
-                </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-          </nav>
+    <div class ="image-container">
+      <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
     </div>
-
-    <div class="container mt-4" id="search-results"></div>
+        <div class="main">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarScroll">
+                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../CarGame/index.html">Spiel</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Autos
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="index.html">Serien</a></li>
+                          <li><a class="dropdown-item" href="engines.html">Motoren</a></li>
+                          <li><a class="dropdown-item" href="x-models.html">X Modelle</a></li>
+                          <li><a class="dropdown-item" href="e-models.html">X Modelle</a></li>
+                          <li><a class="dropdown-item" href="special.html">Sonderwagen</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="../bmw-car/index.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Infos
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="../infos-bmw/history.html">Geschichte</a></li>
+                          <li><a class="dropdown-item" href="../infos-bmw/index.html">Marken</a></li>
+                          <li><a class="dropdown-item" href="../infos-bmw/sustainability.html">Sustainability</a></li>
+                          <li><a class="dropdown-item" href="../infos-bmw/cooperation.html">Kooperationen</a></li>
+                          <li><a class="dropdown-item" href="../infos-bmw/map.html">Unsere Standorte</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../about-us/index.html">Über uns</a>
+                      </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                  </div>
+                </div>  
+              </nav>
+        </div>
+    
+        <div class="container mt-4" id="search-results"></div>
 
     <main class="py-5">
         <div class="container">
