added search on main page

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
             
     </div>
 
+    <div class="container" id="search-results"></div>
+
     <div class="secondPage">
         <h1 class="titel fade-in">Unsere Empfehlungen</h1>
     
@@ -169,6 +171,7 @@
         </nav>
     </div>
 
+<script src="../scripts/search.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
