added game Over

--- a/CarGame/index.html
+++ b/CarGame/index.html
@@ -12,8 +12,10 @@
         <div class="lane-line lane-1"></div>
         <div class="lane-line lane-2"></div>
         <img id="car" src="pngwing.com.png" alt="BMW Auto">
-        <div id="game-over" style="display:none;">Game Over</div>
-        <div id="high-score" style="display:none;">High Score : <span id="survival-time"></span></div>
+        <div id="game-over" style="display:none;">
+            Game Over<br>
+            <span id="final-score"></span>
+        </div>
         <div id="start-message">Drücken Sie Enter, um zu beginnen</div>
       </div>
       
