--- a/CarGame/index.html
+++ b/CarGame/index.html
@@ -1,27 +1,15 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <title>BMW Auto Spiel</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Car Dodge Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="game-container">
-        <div class="side-line left-side"></div>
-        <div class="side-line right-side"></div>
-        <div class="lane-line lane-1"></div>
-        <div class="lane-line lane-2"></div>
-        <img id="car" src="pngwing.com.png" alt="BMW Auto">
-        <div id="game-over" style="display:none;">
-            Game Over<br>
-            <span id="final-score"></span>
-        </div>
-        <div id="start-message">Drücken Sie Enter, um zu beginnen</div>
-      </div>
-      
+    <canvas id="gameCanvas" width="1000" height="600"></canvas>
+    <div id="score">Score: 0</div>
 
-  
-
-  <script src="script.js"></script>
+    <script src="./scripts/game.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
