--- a/CarGame/index.html
+++ b/CarGame/index.html
@@ -2,11 +2,66 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Car Dodge Game</title>
-  <link rel="stylesheet" href="style.css">
+  <title>BMW Car Game</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Styles -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <canvas id="gameCanvas" width="1000" height="600"></canvas>
+
+  <div class="image-container">
+    <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
+  </div>
+
+  <div class="main">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+          aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarScroll">
+          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link active" href="index.html">Spiel</a></li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Autos</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="../bmw-car/index.html">Serien</a></li>
+                <li><a class="dropdown-item" href="../bmw-car/engines.html">Motoren</a></li>
+                <li><a class="dropdown-item" href="../bmw-car/x-models.html">X-Modelle</a></li>
+                <li><a class="dropdown-item" href="../bmw-car/e-models.html">E-Modelle</a></li>
+                <li><a class="dropdown-item" href="../bmw-car/special.html">Sonderwagen</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Infos</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="../infos-bmw/history.html">Geschichte</a></li>
+                <li><a class="dropdown-item" href="../infos-bmw/index.html">Marken</a></li>
+                <li><a class="dropdown-item" href="../infos-bmw/sustainability.html">Sustainability</a></li>
+                <li><a class="dropdown-item" href="../infos-bmw/cooperation.html">Kooperationen</a></li>
+                <li><a class="dropdown-item" href="../infos-bmw/map.html">Unsere Standorte</a></li>
+              </ul>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="../about-us/index.html">Über uns</a></li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </div>
+
+  <div class="container mt-4" id="search-results" style="display: none;"></div>
+
+  <canvas id="gameCanvas" width="1000" height="600" style="margin-top: -600px;"></canvas>
   <div id="score">Score: 0</div>
 
   <div id="logoutArea">
@@ -14,10 +69,11 @@
       <h3>🏆 Bestenliste</h3>
       <div id="leaderboard"></div>
     </div>
-
     <button onclick="logout()">Logout</button>
   </div>
 
+  <script src="../scripts/search.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./scripts/game.js"></script>
   <script src="./scripts/script.js"></script>
 </body>
