--- a/CarGame/index.html
+++ b/CarGame/index.html
@@ -8,7 +8,7 @@
   <!-- Styles -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../styles/main.css">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="carstyle.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
