--- a/CarGame/login.html
+++ b/CarGame/login.html
@@ -1,19 +1,80 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <title>Login</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h2>Car Dodge Login</h2>
-  <form id="authForm">
-    <input type="text" id="username" placeholder="Benutzername" required />
-    <input type="password" id="password" placeholder="Passwort" required />
-    <button type="submit">Login</button>
-    <button type="button" id="registerBtn">Registrieren</button>
-  </form>
-  <div id="message" style="visibility:hidden; font-size: 16px; margin-top: 10px;"></div>
-  <script src="./scripts/auth.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SignIn&SignUp</title>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="forms-container">
+        <div class="signin-signup">
+          <!-- SIGN IN -->
+          <form id="authForm" class="sign-in-form">
+            <h2 class="title">Sign In</h2>
+            <div class="input-field">
+              <i class="fas fa-user"></i>
+              <input type="text" id="username" placeholder="Benutzername" required />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" id="password" placeholder="Passwort" required />
+            </div>
+            <button type="submit" class="btn solid">Login</button>
+            <p class="social-text">Oder mit sozialen Plattformen anmelden</p>
+            <div class="social-media">
+              <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+              <a href="#" class="social-icon"><i class="fab fa-google"></i></a>
+              <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+          </form>
+
+          <!-- SIGN UP -->
+          <form class="sign-up-form">
+            <h2 class="title">Sign Up</h2>
+            <div class="input-field">
+              <i class="fas fa-user"></i>
+              <input type="text" placeholder="Benutzername" />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Passwort" />
+            </div>
+            <button type="button" id="registerBtn" class="btn solid">Registrieren</button>
+            <p class="social-text">Oder mit sozialen Plattformen registrieren</p>
+            <div class="social-media">
+              <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+              <a href="#" class="social-icon"><i class="fab fa-google"></i></a>
+              <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+          </form>
+        </div>
+      </div>
+
+      <div class="panels-container">
+        <div class="panel left-panel">
+          <div class="content">
+            <h3>Neu hier?</h3>
+            <p>Melde dich an und erlebe was Cooles!</p>
+        <button type="button" id="registerBtn" class="btn solid">Registrieren</button>
+          </div>
+        </div>
+        <div class="panel right-panel">
+          <div class="content">
+            <h3>Schon ein Konto?</h3>
+            <p>Dann melde dich einfach an!</p>
+            <button class="btn transparent" id="sign-in-btn">Sign In</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="scripts/app.js"></script>
+    <script src="scripts/auth.js"></script>
+    <div id="message" style="visibility:hidden; font-size: 16px; margin-top: 10px;"></div>
+  </body>
 </html>
