--- a/CarGame/index.html
+++ b/CarGame/index.html
@@ -5,7 +5,6 @@
   <title>BMW Car Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Styles -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../styles/main.css">
   <link rel="stylesheet" href="carstyle.css">
@@ -72,6 +71,8 @@
     <button onclick="logout()">Logout</button>
   </div>
 
+  <audio id="bg-music" src="audio/background.mp3" loop></audio>
+  <audio id="crash-sound" src="audio/crash.mp3"></audio>
   <script src="../scripts/search.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./scripts/game.js"></script>
