added new Box to tipps.html named "Reperatur"

--- a/infos-bmw/tipps.html
+++ b/infos-bmw/tipps.html
@@ -75,6 +75,15 @@
         </div>
     </div>
 
+    <div class="card" style="width: 45rem; height: 37rem;">
+        <img src="../photos/Karl%20Rapp.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Reperatur</h5>
+            <p class="card-text">Ein BMW ist zwar sehr robust und geht nicht so einfach kaputt, doch falls dies der Fall ist, können sie diesen sofort in unserer Filliale bringen und reparieren lassen</p>
+            <a href="https://www.bmw.at/de/mehr-bmw/kundenbetreuung.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+        </div>
+    </div>
+
 
 </main>
 <script src="../scripts/search.js"></script>
