added new photo to box

--- a/infos-bmw/tipps.html
+++ b/infos-bmw/tipps.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMW Marken</title>
+    <title>BMW Kundenbetreuung</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/infos.css">
@@ -76,7 +76,7 @@
     </div>
 
     <div class="card" style="width: 45rem; height: 37rem;">
-        <img src="../photos/Karl%20Rapp.jpg" class="card-img-top" alt="...">
+        <img src="../photos/x5-bmw.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Reperatur</h5>
             <p class="card-text">Ein BMW ist zwar sehr robust und geht nicht so einfach kaputt, doch falls dies der Fall ist, können sie diesen sofort in unserer Filliale bringen und reparieren lassen</p>
@@ -84,7 +84,14 @@
         </div>
     </div>
 
-
+    <div class="card" style="width: 45rem; height: 37rem;">
+        <img src="../photos/gustav-otto.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Gustav Otto</h5>
+            <p class="card-text">Gustav Otto (1883–1926) war ein deutscher Ingenieur und Flugzeugpionier, der 1911 die Gustav Otto Flugmaschinenfabrik in München gründete. Seine Firma entwickelte und baute Flugzeuge, spielte aber nach finanziellen Schwierigkeiten eine Schlüsselrolle bei der Gründung der Bayerischen Flugzeugwerke (BFW), einem Vorläufer von BMW. Ottos Innovationsgeist trug wesentlich zur frühen Entwicklung der Luftfahrt und zur Geschichte von BMW bei.</p>
+            <a href="https://de.wikipedia.org/wiki/Gustav_Otto_(Flugzeugbauer)" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+        </div>
+    </div>
 </main>
 <script src="../scripts/search.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
