added new Box to tipps.html and finished it almost

--- a/infos-bmw/tipps.html
+++ b/infos-bmw/tipps.html
@@ -75,7 +75,7 @@
         </div>
     </div>
 
-    <div class="card" style="width: 45rem; height: 37rem;">
+    <div class="card" style="width: 45rem; height: 33rem;">
         <img src="../photos/x5-bmw.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Reperatur</h5>
@@ -84,12 +84,12 @@
         </div>
     </div>
 
-    <div class="card" style="width: 45rem; height: 37rem;">
-        <img src="../photos/gustav-otto.jpg" class="card-img-top" alt="...">
+    <div class="card" style="width: 45rem; height: 33rem;">
+        <img src="../photos/i2-bmw.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Gustav Otto</h5>
-            <p class="card-text">Gustav Otto (1883–1926) war ein deutscher Ingenieur und Flugzeugpionier, der 1911 die Gustav Otto Flugmaschinenfabrik in München gründete. Seine Firma entwickelte und baute Flugzeuge, spielte aber nach finanziellen Schwierigkeiten eine Schlüsselrolle bei der Gründung der Bayerischen Flugzeugwerke (BFW), einem Vorläufer von BMW. Ottos Innovationsgeist trug wesentlich zur frühen Entwicklung der Luftfahrt und zur Geschichte von BMW bei.</p>
-            <a href="https://de.wikipedia.org/wiki/Gustav_Otto_(Flugzeugbauer)" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+            <h5 class="card-title">Probefahrt</h5>
+            <p class="card-text">Natürlich will auch jeder Kunde wissen, wie sich das Auto anfühlen wird, deswegen haben wir bei BMW eine Probefahrt eingeführt, um Kunden die beste Chance zu geben ihr Traumauto zu bekommen</p>
+            <a href="https://www.jochen-schweizer.at/motorpower/bmw-erlebnisse/l/crvkp?msclkid=52735ada581c156ef3de32fc83deca26&utm_source=bing&utm_medium=cpc&utm_campaign=GIFT_dsa&utm_term=erlebnisse&utm_content=Erlebnisse" target="_blank" class="btn btn-primary">Mehr erfahren</a>
         </div>
     </div>
 </main>
