added links to new website tipps.html

--- a/infos-bmw/sustainability.html
+++ b/infos-bmw/sustainability.html
@@ -52,6 +52,7 @@
                             <li><a class="dropdown-item" href="../infos-bmw/sustainability.html">Sustainability</a></li>
                             <li><a class="dropdown-item" href="../infos-bmw/cooperation.html">Kooperationen</a></li>
                             <li><a class="dropdown-item" href="../infos-bmw/map.html">Unsere Standorte</a></li>
+                            <li><a class="dropdown-item" href="../infos-bmw/tipps.html">Kundenbetreuung</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
