--- a/CarGame/index.html
+++ b/CarGame/index.html
@@ -45,6 +45,7 @@
                 <li><a class="dropdown-item" href="../infos-bmw/sustainability.html">Sustainability</a></li>
                 <li><a class="dropdown-item" href="../infos-bmw/cooperation.html">Kooperationen</a></li>
                 <li><a class="dropdown-item" href="../infos-bmw/map.html">Unsere Standorte</a></li>
+                <li><a class="dropdown-item" href="../infos-bmw/tipps.html">Kundenbetreuung</a></li>
               </ul>
             </li>
             <li class="nav-item"><a class="nav-link" href="../about-us/index.html">Über uns</a></li>
