fixed login bugs

--- a/CarGame/login.html
+++ b/CarGame/login.html
@@ -24,7 +24,8 @@
           </div>
           <button type="submit" class="btn solid">Login</button>
           <div id="login-message" class="form-message"></div>
-          
+        </form>
+
         <form class="sign-up-form" id="registerForm">
           <h2 class="title">Sign Up</h2>
           <div class="input-field">
