--- a/infos-bmw/map.html
+++ b/infos-bmw/map.html
@@ -6,8 +6,75 @@
     <title>BMW Markets and Museums Map</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnWaoXk_uJOc-cXy1Fn1CUpGsBepw0qLs"></script>
     <link rel="stylesheet" href="../styles/map.css">
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/infos.css">
+    <link rel="stylesheet" href="../styles/card.css">
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="carstyle.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
+<div class="image-container">
+    <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
+</div>
+<div class="main">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+                    aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../CarGame/index.html">Spiel</a>
+                      </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            Autos
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="../bmw-car/index.html">Serien</a></li>
+                            <li><a class="dropdown-item" href="../bmw-car/engines.html">Motoren</a></li>
+                            <li><a class="dropdown-item" href="../bmw-car/x-models.html">X-Modelle</a></li>
+                            <li><a class="dropdown-item" href="../bmw-car/e-models.html">E-Modelle</a></li>
+                            <li><a class="dropdown-item" href="../bmw-car/special.html">Sonderwagen</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="../bmw-car/index.html" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            Infos
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="../infos-bmw/history.html">Geschichte</a></li>
+                            <li><a class="dropdown-item" href="../infos-bmw/index.html">Marken</a></li>
+                            <li><a class="dropdown-item" href="../infos-bmw/sustainability.html">Sustainability</a></li>
+                            <li><a class="dropdown-item" href="../infos-bmw/cooperation.html">Kooperationen</a></li>
+                            <li><a class="dropdown-item" href="../infos-bmw/map.html">Unsere Standorte</a></li>
+                            <li><a class="dropdown-item" href="../infos-bmw/tipps.html">Kundenbetreuung</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../about-us/index.html">Über uns</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+</div>
+<div class="container mt-4" id="search-results"></div>
 <div id="map"></div>
 <script>
     function initMap() {
@@ -121,5 +188,9 @@
 
     window.onload = initMap;
 </script>
+<script src="../scripts/search.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./scripts/game.js"></script>
+  <script src="./scripts/script.js"></script>
 </body>
 </html>
