--- a/CarGame/index.html
+++ b/CarGame/index.html
@@ -74,7 +74,7 @@
 
   <audio id="bg-music" src="audio/background.mp3" loop></audio>
   <audio id="crash-sound" src="audio/crash.mp3"></audio>
-  <script src="../scripts/search.js"></script>
+  <script src="../cripts/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./scripts/game.js"></script>
   <script src="./scripts/script.js"></script>
