--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -50,6 +50,7 @@
                             <li><a class="dropdown-item" href="../infos-bmw/cooperation.html">Kooperationen</a></li>
                             <li><a class="dropdown-item" href="../infos-bmw/map.html">Unsere Standorte</a></li>
                             <li><a class="dropdown-item" href="../infos-bmw/tipps.html">Kundenbetreuung</a></li>
+                            <li><a class="dropdown-item" href="../infos-bmw/motorsport.html">Motorsport</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
