--- a/infos-bmw/motorsport.html
+++ b/infos-bmw/motorsport.html
@@ -70,6 +70,19 @@
     </nav>
 </div>
 
+<main class="brands-container">
+    <div class="card" style="width: 40rem; height: 38rem;">
+        <img src="../photos/iM-bmw.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Motorsport</h5>
+            <p class="card-text">BMW Motorsport steht für Leidenschaft, Innovation und Spitzenleistung auf der
+                Rennstrecke. Ob Tourenwagen, Langstreckenrennen oder Formel-Serien – mit technischem Know-how und
+                sportlichem Ehrgeiz prägt BMW seit Jahrzehnten den internationalen Rennsport und bringt diese Dynamik
+                direkt auf die Straße.</p>
+            <a href="https://www.bmw-m.com/de/fastlane/motorsport/motorsport.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+        </div>
+    </div>
+</main>
 <script src="../scripts/search.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
