added second Box

--- a/infos-bmw/motorsport.html
+++ b/infos-bmw/motorsport.html
@@ -72,14 +72,26 @@
 
 <main class="brands-container">
     <div class="card" style="width: 40rem; height: 38rem;">
-        <img src="../photos/iM-bmw.jpg" class="card-img-top" alt="...">
+        <img src="../photos/bmw-m-series-seo-overview-ms-04.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Motorsport</h5>
             <p class="card-text">BMW Motorsport steht für Leidenschaft, Innovation und Spitzenleistung auf der
                 Rennstrecke. Ob Tourenwagen, Langstreckenrennen oder Formel-Serien – mit technischem Know-how und
                 sportlichem Ehrgeiz prägt BMW seit Jahrzehnten den internationalen Rennsport und bringt diese Dynamik
                 direkt auf die Straße.</p>
-            <a href="https://www.bmw-m.com/de/fastlane/motorsport/motorsport.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+            <a href="https://www.bmw-m.com/de/fastlane/motorsport/motorsport.html" target="_blank"
+               class="btn btn-primary">Mehr erfahren</a>
+        </div>
+    </div>
+    <div class="card" style="width: 40rem; height: 38rem;">
+        <img src="../photos/bmw-m-sports-trophy-turner-motorsport-ai-01-16x9.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">BMW M</h5>
+            <p class="card-text">BMW M steht für Hochleistungsfahrzeuge mit Motorsport-DNA. Ob auf der Rennstrecke oder
+                im Alltag – M-Modelle wie der M3, M5 oder der neue XM vereinen Präzision, Performance und Emotion.
+                Technik aus dem Motorsport trifft auf exklusives Design und puren Fahrspaß.</p>
+            <a href="https://www.bmw-m.com/de/fastlane/motorsport/motorsport.html" target="_blank"
+               class="btn btn-primary">Mehr erfahren</a>
         </div>
     </div>
 </main>
