added third Box

--- a/infos-bmw/motorsport.html
+++ b/infos-bmw/motorsport.html
@@ -94,6 +94,17 @@
                class="btn btn-primary">Mehr erfahren</a>
         </div>
     </div>
+    <div class="card" style="width: 40rem; height: 38rem;">
+        <img src="../photos/m2.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">BMW in der DTM</h5>
+            <p class="card-text">BMW ist seit Jahrzehnten eine feste Größe in der Deutschen Tourenwagen Masters (DTM).
+                Mit Fahrzeugen wie dem M4 DTM feierte die Marke zahlreiche Siege und Meistertitel – und begeistert Fans
+                mit technischer Präzision und markantem Design.</p>
+            <a href="https://www.bmw-m.com/de/fastlane/motorsport/motorsport.html" target="_blank"
+               class="btn btn-primary">Mehr erfahren</a>
+        </div>
+    </div>
 </main>
 <script src="../scripts/search.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
