--- a/infos-bmw/motorsport.html
+++ b/infos-bmw/motorsport.html
@@ -105,6 +105,17 @@
                class="btn btn-primary">Mehr erfahren</a>
         </div>
     </div>
+    <div class="card" style="width: 40rem; height: 38rem;">
+        <img src="../photos/bmw-elektro-motorsport.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Rennstrecke trifft Serie</h5>
+            <p class="card-text">Technologien wie Carbonteile, Aerodynamiklösungen und Fahrwerkssysteme werden im
+                Motorsport erprobt und fließen direkt in Serienmodelle wie den M3 oder M8 ein. So wird jede Runde auf
+                der Rennstrecke zum Fortschritt für den Alltag.</p>
+            <a href="https://www.bmw-m.com/de/fastlane/motorsport/racing-series/dtm.html" target="_blank"
+               class="btn btn-primary">Mehr erfahren</a>
+        </div>
+    </div>
 </main>
 <script src="../scripts/search.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
