--- a/infos-bmw/map.html
+++ b/infos-bmw/map.html
@@ -81,6 +81,7 @@
         const map = new google.maps.Map(document.getElementById("map"), {
             center: { lat: 28.110924, lng: 8.682127 },
             zoom: 2,
+            marginTop: 1000,
             styles: [
                 { elementType: "geometry", stylers: [{ color: "#242f3e" }] },
                 { elementType: "labels.text.stroke", stylers: [{ color: "#242f3e" }] },
@@ -183,7 +184,7 @@
             <div><span class="color-box" style="background: orange;"></span>Märkte</div>
             <div><span class="color-box" style="background: blue;"></span>Museen</div>
         `;
-        map.controls[google.maps.ControlPosition.RIGHT_BOTTOM].push(legend);
+        map.controls[googlxe.maps.ControlPosition.RIGHT_BOTTOM].push(legend);
     }
 
     window.onload = initMap;
